update info-bar, fix alignment

--- a/style.css
+++ b/style.css
@@ -84,18 +84,19 @@ ul li {
 .nav-A {
     display: grid;
     grid-template-columns: 3fr 1fr;
-    padding: 1rem 2rem 0 1rem;
+    padding: 1rem 2rem 1rem 1rem;
+    align-items: center;
 }
 
 .search {
     position: relative;
     display: flex;    
     min-width: 100px;
+    align-items: center;
 }
 
 .search-icon {
-    position: absolute;
-    top: 2px;
+    position: absolute;    
     left: 3.5px;
     width: 14px;
 }
@@ -118,7 +119,9 @@ ul li {
 
 .profile {    
     display: flex;
-    justify-content: space-around;    
+    justify-content: space-around;
+    max-width: 12rem;
+    align-items: center;    
 }
 
 .profile span {
@@ -170,18 +173,19 @@ ul li {
 }
 
 .nav-buttons {
-    display: flex;    
+    display: flex;  
+    align-items: center;  
 }
 
 .nav-btn {
-    width: 80px;
-    height: 30px;
+    width: 6rem;
+    height: 2rem;
     border-radius: 15px;
     cursor: pointer;
     background-color: rgb(0, 157, 255);
     border: none;
     color: white;
-    font-size: 0.65rem;
+    font-size: 0.7rem;
     font-weight: bold;
     margin-right: 10px;
 }
@@ -228,10 +232,65 @@ ul li {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     gap: 1rem;
+    margin-bottom: 1rem;
 }
+
+.info-title {
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+.an-title {
+    font-size: 0.75rem;
+    font-weight: bold;
+    margin-bottom: 0.3rem;
+}
+
 /* for border-bottom, only apply it to the first 2 items */ 
 .each-ann {
     background-color: lightpink;
     padding-bottom: 1rem;
     border-bottom: 2px solid darkgrey;
+}
+
+.each-ann p {
+    font-size: 0.75rem;
+}
+
+/* style for info-bar (Trending) */
+
+.trending {
+    background-color: aquamarine;
+    padding: 0.8rem;
+    display: grid;
+    gap: 1rem;   
+}
+
+.trend-acct {
+    background-color: beige;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr 1fr;    
+    max-width: 12rem;
+
+}
+
+.user-image {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    justify-self: center;
+    align-self: center;
+    margin-right: 0.5rem;
+}
+
+.user-at {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    align-self: end;
+    font-weight: bold;
+}
+
+.user-proj {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
 }
